--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,12 +29,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  widget2image: ^1.0.2
+  path_provider: ^2.0.9
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
